<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.lksnext.parkinguartano.view.fragment.MainFragment"
        android:label="@string/fragment_main"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/main_to_date_fragment"
            app:destination="@id/dateFragment" />
    </fragment>

    <fragment
        android:id="@+id/dateFragment"
        android:name="com.lksnext.parkinguartano.view.fragment.DateFragment"
        android:label="@string/fragment_date"
        tools:layout="@layout/fragment_date">
        <action
            android:id="@+id/main_to_hora_fragment"
            app:destination="@id/horaFragment" />
    </fragment>

    <fragment
        android:id="@+id/horaFragment"
        android:name="com.lksnext.parkinguartano.view.fragment.HoraFragment"
        android:label="@string/fragment_hour"
        tools:layout="@layout/fragment_hora" >
        <action
            android:id="@+id/hora_to_parking"
            app:destination="@id/parkingFragment" />
    </fragment>

    <fragment
        android:id="@+id/parkingFragment"
        android:name="com.lksnext.parkinguartano.view.fragment.ParkingFragment"
        android:label="@string/fragment_parking_type_choose"
        tools:layout="@layout/fragment_parking" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.lksnext.parkinguartano.view.fragment.HistoryFragment"
        android:label="@string/fragment_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/userFragment"
        android:name="com.lksnext.parkinguartano.view.fragment.UserFragment"
        android:label="@string/fragment_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_userFragment_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>

    <activity
        android:id="@+id/loginActivity"
        android:name="com.lksnext.parkinguartano.view.activity.LoginActivity">
    </activity>
</navigation>